- Fixed splash align

--- a/wnk-timeline/src/css/styles.less
+++ b/wnk-timeline/src/css/styles.less
@@ -49,8 +49,7 @@ h1, h2, h3, h4, h5, h6 {
 
 
 	.master-head {
-		padding: 7% 30px;
-		min-height: 100%;
+		min-height: 100vh;
 	}
 
 	.page-title {
@@ -414,6 +413,10 @@ audio:nth-child(2), audio:nth-child(4), audio:nth-child(6) {
 @import url('https://fonts.googleapis.com/css?family=Pacifico');
 
 /* Container for SVG Ani */
+.container {
+	padding: 30vh 0 30vh 0;
+}
+
 .container svg {
 	stroke-width: 2;
 }
